--- a/docs/ADSA_presentation.qmd
+++ b/docs/ADSA_presentation.qmd
@@ -7,27 +7,32 @@ incremental: true
 format: 
   html: 
     toc: false
+    link-external-icon: true
+    link-external-newwindow: true
   revealjs: 
     output-file: ADSA_presentation-revealjs.html
-    theme: simple
+    theme: [simple, css/styles.scss]
   pptx: 
     output-file: ADSA_presentation-powerpoint.pptx
     reference-doc: DI_template.pptx
+filters:
+  - shinylive
 ---
 
 ::: {.content-visible when-format="html" unless-format="revealjs"}
 ::: callout-note
-This presentation was presented by Dave Innes at ADSA June 2024, West Palm Beach, Florida. Part of this presentation was to demonstrate that the same 'Quarto' file (`.qmd`) can be rendered into multiple formats. Use the links under 'Other Formats' (right-hand side menu) to view the presentation in a RevealJS (`.html` that will open in web browser) or download the Powerpoint (`.pptx`) file (because I had to for the conference!).
+This was presented by Dave Innes at ADSA June 2024, West Palm Beach, Florida. Part of this presentation was to demonstrate that the same 'Quarto' file (`.qmd`) can be rendered into multiple formats. Use the links under 'Other Formats' (right-hand side menu) to view the presentation in a RevealJS (`.html` that will open in web browser) or download the Powerpoint (`.pptx`) file (because I had to for the conference!).
 
-The source code for this file is available here: ____
+The source code is available here: <https://github.com/CNM-University-of-Guelph/NASEM-shiny/tree/main/docs>
 :::
 :::
 
-# Interesting Intro slide
+# 
+
+![](media/future_dairy_nutrition.webp)
 
 
 ## Intro to Quarto
-
 
 -   Unified authoring framework
 -   Flat text files (based on Pandoc markdown)
@@ -35,47 +40,199 @@ The source code for this file is available here: ____
 -   Can also execute code directly (supports R, Python, Julia, Observable)
 -   Encourages reproducible analysis
 
-
-![](media/quarto_get_started.png){width="270" height="150"}
+![](media/quarto_languages.png)
 
 ## Render to many formats
 
+| **Category**      | **Formats**                                                                                                                                                                |
+|------------------|------------------------------------------------------|
+| **Documents**     | HTML, PDF, MS Word, OpenOffice, ePub                                                                                                                                       |
+| **Presentations** | Reveal.js, PowerPoint, Beamer                                                                                                                                              |
+| **Markdown**      | GitHub, CommonMark, Hugo, Docusaurus                                                                                                                                       |
+| **Wikis**         | MediaWiki, DokuWiki, ZimWiki, Jira Wiki, XWiki                                                                                                                             |
+| **More**          | JATS, Jupyter, ConTeXt, RTF, reST, AsciiDoc, Org-Mode, Muse, Texinfo, Groff Man Page, Groff Manuscript, Haddock, OPML, Textile, DocBook, InDesign, TEI Simple, FictionBook |
 
--   Articles & Reports
--   Dashboards
--   Websites
--   Books
--   Presentations (RevealJS \[html\], Beamer \[LaTeX/PDF\] or PowerPoint as \[pptx\])
+## The source code of this presentation
 
+![Visual editor for a .qmd file](media/visual-editor.png){height="500"}
 
-## The source code of this presentation...
-![Source code - a .qmd file](media/presentation_source.png){height='500'}
+## Rendered to multiple formats
 
-
-## ...rendered to multiple formats
-
-Update with newer version ![The same base quarto file with multiple formats rendered at same time.](media/format_comparison.png){height='600'}
-
-
-## See for yourself...
-
-QR code
+![](media/format_comparison.png){height="600"}
 
 ## Interactivity
 
--   add interactive app
--   screenshot for PowerPoint
+::: column-screen-inset
+::: {.content-visible when-format="html"}
+```{shinylive-python}
+#| standalone: true
+#| viewerHeight: 800
+#| components: [editor, viewer]
 
-## Advanced Web Applications with Shiny
-- More advanced than Quarto 
-- Originally only available in R, but now Python too!
-- Great for simple interactive dashboards...
-- ... and is scalable as complex software
+## file: app.py
+from shiny import reactive, req
+from shiny.express import input, render, ui
+from shinywidgets import output_widget, render_widget
 
+from functions import plot_dairy_repro_timeline
+
+ui.input_numeric('days_dry', 'Dry period (d)', 60, min = 1)
+ui.input_numeric('days_VWP', 'Voluntary wait period (VWP, d)', 60, min = 1)
+ui.input_numeric('days_gest', 'Gestation length (d)', 280, min = 1)
+ui.input_numeric('days_open', 'Days open (calving-to-conception)', 85, min = 1)
+   
+@reactive.Calc
+def calc_plot():
+        return plot_dairy_repro_timeline(
+            VWP_d=input.days_VWP(),
+            calving_to_conception_DIM=input.days_open(),
+            gestation_length_d=input.days_gest(),
+            dry_period_length_d=input.days_dry())
+
+@render_widget
+def plot():
+    return calc_plot()['plot']
+    
+@render.text
+def lactation_length():
+    return calc_plot()['lac_length']
+
+@render.text
+def calve_interval():
+    return calc_plot()['calving_interval']
+
+## file: functions.py
+import pandas as pd
+import plotly.express as px
+import plotly.graph_objects as go
+
+
+def plot_dairy_repro_timeline(
+        VWP_d = 60,
+        dry_period_length_d = 60,
+        gestation_length_d = 280,
+        # calving_interval = 365,
+        calving_to_conception_DIM = 85
+        ):
+    
+    breeding_period_d = calving_to_conception_DIM  - VWP_d
+
+    breeding_period_start_DIM = calving_to_conception_DIM - breeding_period_d
+
+    gestation_end_DIM = calving_to_conception_DIM  + gestation_length_d #365
+
+    lactation_length_d = gestation_end_DIM - dry_period_length_d #305
+
+
+    if gestation_end_DIM < 500:
+        xmax = 500
+    else:
+        xmax = gestation_end_DIM + 10
+    
+    df_data = [
+        {
+            'x_start': 0,
+            'x_end': lactation_length_d,
+            'y': 'Lactation'
+        },
+        {
+            'x_start': lactation_length_d,
+            'x_end': gestation_end_DIM,
+            'y': 'Dry period'
+        },
+        {
+            'x_start': breeding_period_start_DIM,
+            'x_end': calving_to_conception_DIM,
+            'y': 'Breeding period'
+        },
+        {
+            'x_start': 0,
+            'x_end': VWP_d,
+            'y': 'VWP'
+        },
+        {
+            'x_start': calving_to_conception_DIM ,
+            'x_end': gestation_end_DIM,
+            'y': 'Gestation period'
+        },
+                {
+            'x_start': 0,
+            'x_end': calving_to_conception_DIM,
+            'y': 'Days open'
+        },
+    ]
+
+
+    plot_data = pd.DataFrame(df_data).assign(
+        Days = lambda df: df.x_end - df.x_start,
+        Days_2 = lambda df: df.Days.astype('string') + ' d'
+    )
+    
+    fig = (
+        px.bar(
+            plot_data, 
+            base = "x_start",
+            x = "Days",
+            y = "y",
+            color = 'y',
+            orientation = 'h',
+            text = "Days_2",
+            category_orders = {'y':[
+                'VWP',
+                'Breeding period',
+                'Days open',
+                'Gestation period',
+                'Dry period',
+                'Lactation'
+                ]},
+            color_continuous_scale='viridis', color_discrete_sequence=px.colors.qualitative.Set1,
+            height = 400
+        )
+        .update_layout(
+            showlegend=False,
+            xaxis = dict(
+                tickmode = 'array',
+                tickvals = [0, VWP_d, calving_to_conception_DIM, lactation_length_d, gestation_end_DIM]
+                ),
+            margin=dict(l=5, r=5, t=5, b=5),
+            )
+        .update_traces(
+            width=0.7, 
+            textposition = 'inside'
+            )
+        .update_xaxes(range = [0,xmax], title = 'Days In Milk')
+        .update_yaxes(title='')
+    )
+
+    fig.update_layout(font=dict(family='Arial', size=14, color='black'))
+    
+    plot_background_color = '#F4F4F4'  
+    fig.update_layout(plot_bgcolor=plot_background_color)
+
+    str_lac_length = 'Lactation length (d): ' + str(lactation_length_d)
+    print(str_lac_length)
+
+    print('Current breeding period length (d): ' + str(breeding_period_d))
+    print('Start breeding by (DIM): ' + str(breeding_period_start_DIM))
+
+    str_calving_interval = 'Calving interval (d): ' + str(gestation_end_DIM)
+    print(str_calving_interval)
+
+    return {
+        'plot':fig,
+        'lac_length': str_lac_length,
+        'calving_interval': str_calving_interval
+        }
+
+
+```
+:::
+:::
 
 # Why develop a Shiny version of NASEM 2021 Model?
 
-## NASEM in Python
+::: {.smaller}
+## NASEM in Python 
 ```{python}
 #| echo: false
 import nasem_dairy as nd
@@ -94,8 +251,9 @@ feed_library_in = pd.read_csv(
   path_to_package_data.joinpath("NASEM_feed_library.csv"))
 ```
 
+
 ::: {.content-visible when-format="html" unless-format="revealjs"}
-- As simple as:
+
 ```{python }
 #| warning: false
 import nasem_dairy as nd
@@ -111,7 +269,6 @@ output = nd.execute_model(
 output
 ```
 :::
-
 
 ::: {.content-visible when-format="revealjs"}
 ```{python }
@@ -132,89 +289,132 @@ output
 ```
 :::
 
-## Open-source, tracked and collaborative
-[Our group's GitHub page](https://github.com/CNM-University-of-Guelph)
+:::
 
+## Open-source, tracked and collaborative
+
+<https://github.com/CNM-University-of-Guelph>
+
+![](media/github-CNM.png)
 
 ## Fourth year Dairy Cattle Nutrition class
-- 45 undergraduate students
-- Mixed background: ~20% had dairy farm experience
-- Mostly pre-veterinary degree
 
-**pics*
+-   45 undergraduate students
+-   Mixed background: \~20% had dairy farm experience
+-   Mostly pre-veterinary degree
+
+![](media/students_feed.jpeg)
+
 
 ## How to teach ration balancing?
-- Challenges:
-    - Want to teach latest model (NASEM 2021)
-    - Excel sheet used in the past
-    - Software with book:
-       - Complicated for begginers
-       - Only works on Windows
-    - Commercial/industry software:
-      - Expensive
-      - Hard to access
-      - Even more complex 
 
-## So we built our own!
-- Web based app 
-- Works on all computers (and mobile phones)
-- Simplified user experience
+-   Challenges:
+    -   Want to teach latest model (NASEM 2021)
+    -   Excel sheet used in the past
+    -   Software with book:
+        -   Complicated for beginners
+        -   Only works on Windows
+    -   Commercial/industry software:
+        -   Expensive
+        -   Hard to access
+        -   Even more complex
 
-*QR Code & Link*
+## Solution? We built our own!
 
-## Video Walk Through
-video
+-   Web based app
+-   Works on all computers (and mobile phones)
+-   Simplified user experience
+
+<https://dave-innes-uog.shinyapps.io/nasem_shiny/>
+
+![](media/qrcode_dave-innes-uog.shinyapps.io.png)
+
+----
+
+![Welcome](media/shiny-welcome.png)
+
+---
+
+![Inputs](media/shiny-inputs.png)
+
+----
+
+![Feed Library](media/shiny-2-feedlib.png)
+
+----
+
+![Feed Library - viewer settings](media/shiny-3-feedlib.png)
+
+----
+
+![Upload custom feed library](media/shiny-4-customfeedlib.png)
+
+----
+
+![Diet Input](media/shiny-5-diet.png)
+
+----
+
+![Diet Input - sidebar](media/shiny-6-diet.png)
+
+----
+
+![Built-in demo diet](media/shiny-7-demodiet.png)
+
+----
+
+![Outputs](media/shiny-8-outputs.png)
+
+----
+
+![Advanced - search all model outputs](media/shiny-9-outputs.png)
 
 
 ## Assignment 1 - early semester
--   Pre-loaded scenarios with a clear error
+
+-   Assignment sheet with steps and screen recordings
 -   Demonstrations in workshops
--   Assignment sheet with steps and screen recordings Objective:
+-   Pre-loaded scenarios with a clear mistake
+-   Objective:
     -   Get the feel of adding/removing ingredients
     -   Find meaningful outputs in the app
     -   Fix a basic problem
 
 ## Example Video
-- How to set up a simulation & load
+
+-   How to set up a simulation & load
 
 ## Assignment 2 - mid semester
-- Introduce Dry vs Lactating Cow
-- Reading farm forage analyses
-- Adding new ingredients 
-- Formulating full diets
+
+-   Introduce Dry vs Lactating Cow
+-   Read and interpret farm forage analyses
+-   Adding new ingredients to app
+-   Formulating full diets
 
 ## Case Study Assignment
--  Visit farm, take feed samples, formulate new rations
+
+![](media/students_on_farm.jpeg)
 
 ## Initial feedback
-- Early versions couldn't save sessions
-- Student's needed multiple ways to learn it - videos, step-by-step instructions, classroom demo
-- The app is simplified, but the content is still hard
-- Students suprised how hard it was to formulate a ration for a very high producing dairy herd
-  - (It's a weakness of the model, not the students!)
+
+-   Early versions couldn't save sessions
+-   Student's needed multiple ways to learn it - videos, step-by-step instructions, classroom demo
+-   The app is simplified, but the content was still difficult
+-   Students surprised how hard it was to formulate a ration for a very high producing dairy herd
+    -   (It's a limitation of the model, not the students!)
 
 ## How to use & contribute?
-- Open Source - NASEM model & the Shiny App
-- GitHub - log 'Issues' as a user - even if no experience with code
-- Read the docs - running on own computer or re-deploying custom versions is relatively simple
+
+-   Open Source - NASEM model & the Shiny App
+-   GitHub - log 'Issues' as a user - even if no experience with code
+-   Read the docs - running on own computer or re-deploying custom versions is relatively simple
+
+![](media/github-Issues.png)
 
 ## Conclusions
-- Quarto is an example of how future publishing can look
-- Shiny has potential to modernise teaching and reserearch communication
-- We need to encourage our societies and organising commities to allow these tools to be used in meetings
-- Collectively sharing resources via an open-source platform will accellerate model improvement
-  - feedback wanted
 
-
-
-## Columns
-
-::: columns
-::: {.column width="40%"}
-contents...
-:::
-
-::: {.column width="60%"}
--   text
-:::
-:::
+-   Quarto is an example of how future publishing can look
+-   Shiny has potential to modernise teaching and research communication
+-   We need to encourage our societies and organising committees to allow these tools to be used in meetings
+-   Collectively sharing resources via an open-source platform will accelerate model improvement
+    -   feedback wanted
