--- a/docs/Using_the_app.qmd
+++ b/docs/Using_the_app.qmd
@@ -4,7 +4,12 @@ resources:
   - "media/screen_recording_reencoded.mp4"
 ---
 
+## Video
 {{< video src="media/screen_recording_reencoded.mp4" type="video/mp4">}}
+
+
+## Example Assignment
+
 
 
 
