--- a/docs/index.qmd
+++ b/docs/index.qmd
@@ -4,90 +4,99 @@ title: "Nutrient Requirements of Dairy Cattle - 8th Edition (NASEM 2021)"
 
 This is the documentation website for the **NASEM Shiny** web application.
 
-This app is a simplified version of the model described in the 8th Edition of the [Nutrient Requirements of Dairy Cattle book](https://www.nationalacademies.org/our-work/nutrient-requirements-of-dairy-cattle-8th-edition){target="_blank"}. 
+This app is a simplified version of the model described in the 8th Edition of the [Nutrient Requirements of Dairy Cattle book](https://www.nationalacademies.org/our-work/nutrient-requirements-of-dairy-cattle-8th-edition){target="_blank"}.
 
 The current version of this app supports Lactating and Dry Cows and is being developed for teaching and research only. This software should not be used for on-farm or commercial decisions.
 
 ## Free online access
 
-The current version of NASEM Shiny is hosted at: <https://dave-innes-uog.shinyapps.io/nasem_shiny/>{target="_blank"}
+The current version of NASEM Shiny is hosted at: [https://dave-innes-uog.shinyapps.io/nasem_shiny/](https://dave-innes-uog.shinyapps.io/nasem_shiny/){target="_blank"}
 
-:::{.callout-tip}
+See [Developer Notes](Developer_notes.html) for source code.
 
+::: callout-tip
 ## Acknowledgements
 
-The Shiny App and associated python implementation of the NASEM modle was developed by Dave Innes, Braeden Fieguth and John Cant, University of Guelph. The model was based on the original R code that is included with the book [and online](https://nap.nationalacademies.org/resource/25806/Installation_Instructions_NASEM_Dairy8.pdf){target="_blank"}.
+The Shiny App and associated python implementation of the NASEM model was developed by Dave Innes, Braeden Fieguth and John Cant, University of Guelph. The model was based on the original R code that is included with the book [and online](https://nap.nationalacademies.org/resource/25806/Installation_Instructions_NASEM_Dairy8.pdf){target="_blank"}.
 
 The source code for the latest Python implementation of the model can be viewed [on GitHub](https://github.com/CNM-University-of-Guelph/NASEM-Model-Python){target="_blank"}.
 
 <!-- Custom image inclusion; ensure the path is correct -->
-![](/media/absc_logo.png){width=240}
+
+![](/media/absc_logo.png){width="240"}
 :::
 
 ## Running locally
 
-The shiny app can also be executed on a user's computer. However, some knowledge of Python and VSCode is required.
+The shiny app can also be executed on a user's computer. However, some knowledge of Python and VSCode is required. See [Developer Notes](Developer_notes.html) for more details.
 
 <details>
+
 <summary><strong>How to Setup and Run the Shiny App Locally</strong></summary>
 
 ### Step 1: Install Git
 
-1. Open a terminal or command prompt.
-2. For macOS, install Git using Homebrew:
+1.  Open a terminal or command prompt.
 
-    ```bash
+2.  For macOS, install Git using Homebrew:
+
+    ``` bash
     brew install git
     ```
 
-   For Ubuntu/Debian-based Linux distributions, install Git using apt:
+    For Ubuntu/Debian-based Linux distributions, install Git using apt:
 
-    ```bash
+    ``` bash
     sudo apt-get update
     sudo apt-get install git
     ```
 
-   For Windows, download and install the Git executable from [git-scm.com](https://git-scm.com).
+    For Windows, download and install the Git executable from [git-scm.com](https://git-scm.com).
 
 ### Step 2: Clone the Repository
 
-1. Open your terminal or command prompt.
-2. Navigate to the directory where you want to clone the repository.
-3. Run the following command
+1.  Open your terminal or command prompt.
 
-    ```bash
+2.  Navigate to the directory where you want to clone the repository.
+
+3.  Run the following command
+
+    ``` bash
     git clone https://github.com/CNM-University-of-Guelph/NASEM-shiny.git
     ```
 
 ### Step 3: Set Up the Conda Environment
 
-1. Navigate into the cloned repository directory:
+1.  Navigate into the cloned repository directory:
 
-    ```bash
+    ``` bash
     cd NASEM-shiny
     ```
-2. Create a new conda environment and install the required packages:
 
-    ```bash
+2.  Create a new conda environment and install the required packages:
+
+    ``` bash
     conda create --name NASEM_env --file requirements.txt
     ```
-3. Activate the newly created environment:
 
-    ```bash
+3.  Activate the newly created environment:
+
+    ``` bash
     conda activate NASEM_env
     ```
 
 ### Step 4: Install VSCode Shiny Extension
 
-1. Open Visual Studio Code (<https://code.visualstudio.com/>{target="_blank"})
-2. Go to the Extensions view by clicking on the square icon on the sidebar or pressing `Ctrl+Shift+X`.
-3. Search for "Shiny".
-4. Click on the install button next to the extension.
+1.  Open Visual Studio Code ([https://code.visualstudio.com/](https://code.visualstudio.com/){target="_blank"})
+2.  Go to the Extensions view by clicking on the square icon on the sidebar or pressing `Ctrl+Shift+X`.
+3.  Search for "Shiny".
+4.  Click on the install button next to the extension.
 
 ### Step 5: Run the Shiny App Locally
 
-1. In VSCode, open the folder containing the cloned Shiny for Python application.
-2. Open `app.py`
-3. Open a new terminal and ensure your conda environment is activated.
-4. Press the play {{< fa play >}} button at the top right corner of app.py to run the shiny app
+1.  In VSCode, open the folder containing the cloned Shiny for Python application.
+2.  Open `app.py`
+3.  Open a new terminal and ensure your conda environment is activated.
+4.  Press the play {{< fa play >}} button at the top right corner of app.py to run the shiny app
+
 </details>
