--- a/docs/Developer_Notes.qmd
+++ b/docs/Developer_Notes.qmd
@@ -8,7 +8,7 @@ The source code for this Shiny App is available on [our github {{< fa brands git
 
 ## Running Locally
 
-The shiny app can also be executed on a user's computer. However, some knowledge of Python and VSCode is required. See [Developer Notes](Developer_notes.html) for more details.
+The shiny app can also be executed on a user's computer. However, some knowledge of Python and VSCode is required. 
 
 <details>
 
