--- a/docs/Using_the_app.qmd
+++ b/docs/Using_the_app.qmd
@@ -5,10 +5,10 @@ resources:
 ---
 
 ## Video
+Note: This screen recording uses an old version of the app. A new video will be uploaded soon.
+
 {{< video src="media/screen_recording_reencoded.mp4" type="video/mp4">}}
 
-
-## Example Assignment
 
 
 
