--- a/README.qmd
+++ b/README.qmd
@@ -77,8 +77,13 @@ The shiny app can also be executed on a user's computer. However, some knowledge
 2.  Create a new conda environment and install the required packages:
 
     ``` bash
-    conda create --name NASEM_env --file requirements.txt
+    conda env create --file environment.yml --name NASEM_env 
     ```
+
+    ::: {.callout-note}
+    There is an additional file called `requirements.txt` that is used for deploying to <shinyapps.io>.
+    :::
+
 
 3.  Activate the newly created environment:
 
