--- a/README.qmd
+++ b/README.qmd
@@ -16,16 +16,16 @@ The current version of this app supports Lactating and Dry Cows and is being dev
 
 The current version of NASEM Shiny is hosted at: [https://dave-innes-uog.shinyapps.io/nasem_shiny/](https://dave-innes-uog.shinyapps.io/nasem_shiny/)
 
-::: {.callout-tip}
-## Acknowledgements:
 
-The Shiny App and associated python implementation of the NASEM model was developed by Dave Innes, Braeden Fieguth and John Cant, University of Guelph. The model was based on the original R code that is included with the book [and online](https://nap.nationalacademies.org/resource/25806/Installation_Instructions_NASEM_Dairy8.pdf).
+> ## Acknowledgements:
+> 
+> The Shiny App and associated python implementation of the NASEM model was developed by Dave Innes, Braeden Fieguth and John Cant, University of Guelph. The model was based on the original R code that is included with the book [and online](https://nap.nationalacademies.org/resource/25806/Installation_Instructions_NASEM_Dairy8.pdf).
+> 
+> The source code for the latest Python implementation of the model can be viewed [on GitHub](https://github.com/CNM-University-of-Guelph/NASEM-Model-Python).
+> 
+> ![](./docs/media/absc_logo.png){width=240px}
 
-The source code for the latest Python implementation of the model can be viewed [on GitHub](https://github.com/CNM-University-of-Guelph/NASEM-Model-Python).
 
-![](./docs/media/absc_logo.png){width=240px}
-
-:::
 
 
 ## Running locally
@@ -80,7 +80,11 @@ The shiny app can also be executed on a user's computer. However, some knowledge
     conda env create --file environment.yml --name NASEM_env 
     ```
 
+    ::: {.callout-important}
+    
+    There is an additional file called `requirements.txt` that is used for deploying to <shinyapps.io>.
 
+    :::
 
 3.  Activate the newly created environment:
 
@@ -88,9 +92,6 @@ The shiny app can also be executed on a user's computer. However, some knowledge
     conda activate NASEM_env
     ```
 
-::: {.callout-note}
-There is an additional file called `requirements.txt` that is used for deploying to <shinyapps.io>.
-:::
 
 ### Step 4: Install VSCode Shiny Extension
 
