reformat README.qmd

--- a/README.qmd
+++ b/README.qmd
@@ -78,11 +78,11 @@ The shiny app can also be executed on a user's computer. However, some knowledge
     conda env create --file environment.yml --name NASEM_env 
     ```
 
-    ::: {.callout-important}
-    
-    There is an additional file called `requirements.txt` that is used for deploying to <shinyapps.io>.
+::: {.callout-important}
 
-    :::
+This step uses the environment.yml file to create the conda environment. There is also a file called `requirements.txt` that is used for deploying the app to [](shinyapps.io).
+
+:::
 
 3.  Activate the newly created environment:
 
