--- a/README.qmd
+++ b/README.qmd
@@ -80,7 +80,7 @@ The shiny app can also be executed on a user's computer. However, some knowledge
 
 ::: {.callout-important}
 
-This step uses the environment.yml file to create the conda environment. There is also a file called `requirements.txt` that is used for deploying the app to [](shinyapps.io).
+This step uses the `environment.yml` file to create the conda environment. There is also a file called `requirements.txt` that is used for deploying the app to [shinyapps.io](https://shinyapps.io).
 
 :::
 
