remove fa icons from README.qmd

--- a/README.qmd
+++ b/README.qmd
@@ -103,5 +103,5 @@ This step uses the `environment.yml` file to create the conda environment. There
 1.  In VSCode, open the folder containing the cloned Shiny for Python application.
 2.  Open `app.py`
 3.  Open a new terminal and ensure your conda environment is activated.
-4.  Press the play {{< fa play >}} button at the top right corner of app.py to run the shiny app
+4.  Press the play button at the top right corner of app.py to run the shiny app
 
